tests/expectations/compiler/structs/external_program_cross_module_combo.out
program child.aleo;

struct Point__EQrYLk3V7pa:
    x as u32;
    y as u32;

struct Segment__14CrFljlunD:
    start as Point__EQrYLk3V7pa;
    end as Point__EQrYLk3V7pa;

struct Scaled__G8MwLTGHMVv:
    origin as u32;
    factor as u32;

function get_origin:
    cast 0u32 0u32 into r0 as Point__EQrYLk3V7pa;
    output r0 as Point__EQrYLk3V7pa.private;

function make_segment:
    input r0 as u32.private;
    input r1 as u32.private;
    input r2 as u32.private;
    input r3 as u32.private;
    cast r0 r1 into r4 as Point__EQrYLk3V7pa;
    cast r2 r3 into r5 as Point__EQrYLk3V7pa;
    cast r4 r5 into r6 as Segment__14CrFljlunD;
    output r6 as Segment__14CrFljlunD.private;

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import child.aleo;
program parent.aleo;

function combine:
    input r0 as child.aleo/Point__EQrYLk3V7pa.private;
    input r1 as child.aleo/Scaled__G8MwLTGHMVv.private;
    add r0.x r0.y into r2;
    add r2 r1.origin into r3;
    add r3 r1.factor into r4;
    output r4 as u32.private;

function segment_length:
    input r0 as child.aleo/Segment__14CrFljlunD.private;
    sub r0.end.x r0.start.x into r1;
    sub r0.end.y r0.start.y into r2;
    add r1 r2 into r3;
    output r3 as u32.private;

function make_and_measure:
    input r0 as u32.private;
    input r1 as u32.private;
    input r2 as u32.private;
    input r3 as u32.private;
    cast r0 r1 into r4 as child.aleo/Point__EQrYLk3V7pa;
    cast r2 r3 into r5 as child.aleo/Point__EQrYLk3V7pa;
    sub r5.x r4.x into r6;
    sub r5.y r4.y into r7;
    add r6 r7 into r8;
    output r8 as u32.private;

function full_combo:
    input r0 as child.aleo/Segment__14CrFljlunD.private;
    input r1 as child.aleo/Scaled__G8MwLTGHMVv.private;
    sub r0.end.x r0.start.x into r2;
    sub r0.end.y r0.start.y into r3;
    add r2 r3 into r4;
    mul r4 r1.factor into r5;
    add r5 r1.origin into r6;
    output r6 as u32.private;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372017]: The type `child.aleo::shapes::Point` is not found in the current scope.
    --> compiler-test:7:16
     |
   7 |     fn combine(p: child.aleo::shapes::Point, s: child.aleo::transforms::Scaled) -> u32 {
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::transforms::Scaled` is not found in the current scope.
    --> compiler-test:7:46
     |
   7 |     fn combine(p: child.aleo::shapes::Point, s: child.aleo::transforms::Scaled) -> u32 {
     |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Point` is not found in the current scope.
    --> compiler-test:8:16
     |
   8 |         return p.x + p.y + s.origin + s.factor;
     |                ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Point` is not found in the current scope.
    --> compiler-test:8:22
     |
   8 |         return p.x + p.y + s.origin + s.factor;
     |                      ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::transforms::Scaled` is not found in the current scope.
    --> compiler-test:8:28
     |
   8 |         return p.x + p.y + s.origin + s.factor;
     |                            ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::transforms::Scaled` is not found in the current scope.
    --> compiler-test:8:39
     |
   8 |         return p.x + p.y + s.origin + s.factor;
     |                                       ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:12:23
     |
  12 |     fn segment_length(seg: child.aleo::shapes::Segment) -> u32 {
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:13:17
     |
  13 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                 ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:13:29
     |
  13 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                             ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:13:45
     |
  13 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                             ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:13:57
     |
  13 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                                         ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:18:9
     |
  18 |         let seg: child.aleo::shapes::Segment = child.aleo::shapes::Segment {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  19 |             start: child.aleo::shapes::Point { x: x0, y: y0 },
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  20 |             end: child.aleo::shapes::Point { x: x1, y: y1 },
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  21 |         };
     |         ^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372005]: Unknown struct or record `child.aleo::shapes::Segment`
    --> compiler-test:18:48
     |
  18 |         let seg: child.aleo::shapes::Segment = child.aleo::shapes::Segment {
     |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:22:17
     |
  22 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                 ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:22:29
     |
  22 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                             ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:22:45
     |
  22 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                             ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:22:57
     |
  22 |         return (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                                         ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:26:19
     |
  26 |     fn full_combo(seg: child.aleo::shapes::Segment, s: child.aleo::transforms::Scaled) -> u32 {
     |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::transforms::Scaled` is not found in the current scope.
    --> compiler-test:26:53
     |
  26 |     fn full_combo(seg: child.aleo::shapes::Segment, s: child.aleo::transforms::Scaled) -> u32 {
     |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:27:25
     |
  27 |         let len: u32 = (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                         ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:27:37
     |
  27 |         let len: u32 = (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                     ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:27:53
     |
  27 |         let len: u32 = (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                                     ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::shapes::Segment` is not found in the current scope.
    --> compiler-test:27:65
     |
  27 |         let len: u32 = (seg.end.x - seg.start.x) + (seg.end.y - seg.start.y);
     |                                                                 ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::transforms::Scaled` is not found in the current scope.
    --> compiler-test:28:22
     |
  28 |         return len * s.factor + s.origin;
     |                      ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::transforms::Scaled` is not found in the current scope.
    --> compiler-test:28:33
     |
  28 |         return len * s.factor + s.origin;
     |                                 ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
